<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Level_screen"
    android:background="@color/accent_material_light">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent">

        <Button
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:text="@string/mode_1"
            android:id="@+id/level1"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_gravity="center" />

        <Button
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:text="@string/mode_2"
            android:id="@+id/level2"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_gravity="center" />

        <Button
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:text="@string/mode_3"
            android:id="@+id/level3"
            android:layout_row="0"
            android:layout_column="2"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_gravity="center" />

        <Button
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:text="@string/mode_4"
            android:id="@+id/level4"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_gravity="center" />

        <Button
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:id="@+id/level5"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/mode_5"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_gravity="center" />

        <Button
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:text="@string/mode_6"
            android:id="@+id/level6"
            android:layout_row="1"
            android:layout_column="2"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_gravity="center" />

        <Button
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:text="@string/mode_7"
            android:id="@+id/level7"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_gravity="center" />

        <Button
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:text="@string/mode_8"
            android:id="@+id/level8"
            android:layout_row="2"
            android:layout_column="1"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_gravity="center" />

        <Button
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:text="@string/mode_9"
            android:id="@+id/level9"
            android:layout_row="2"
            android:layout_column="2"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_gravity="center" />
    </GridLayout>
</RelativeLayout>
