<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dell.smackerballs.HomeActivity"
    android:background="#070b41"
    android:theme="@style/Theme.AppCompat.NoActionBar">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Play_Single_Player"
        android:id="@+id/button1"
        android:layout_marginTop="117dp"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:clickable="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SettingsButton"
        android:id="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:background="@android:color/transparent"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:clickable="true"
        android:layout_below="@+id/button1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HelpButton"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:clickable="true" />
</RelativeLayout>
